security control of user codes